fix data refresh

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 
     // Kick off loading
     loadTraffic();
+    
+    // Auto-refresh every minute
+    setInterval(loadTraffic, 60000);
   </script>
 
   <a href="https://qr.vipps.no/box/47454e97-622b-4d1a-a881-d2a841cde8ce/pay-in" 
